--- a/assets/style.css
+++ b/assets/style.css
@@ -202,3 +202,18 @@ pre {
 .tree-viewer-pd{
 	padding:30px;
 }
+
+.DateInput, .DateInput_1 {
+    border-radius: 4px 0 0 4px !important;
+}
+
+.DateInput_input, .DateInput_input_1 {
+    Height: 34px !important;
+    Width: 100% !important;
+    border-radius: inherit;
+}
+
+.SingleDatePickerInput__withBorder {
+    border-radius: 4px 0 0 4px;
+    border: 1px solid #ccc !important;
+}
