--- a/assets/style.css
+++ b/assets/style.css
@@ -210,6 +210,7 @@ pre {
 .DateInput_input, .DateInput_input_1 {
     Height: 34px !important;
     Width: 100% !important;
+    font-size: 9;
     border-radius: inherit;
 }
 
